k8s/gcp/managed-cert-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: chatemo-domain
    networking.gke.io/managed-certificates: managed-cert
    # kubernetes.io/ingress.class: 'gce'
    ingress.kubernetes.io/affinity: 'client-ip'
spec:
  ingressClassName: gce
  defaultBackend:
    service:
      name: chatemo
      port:
        number: 80
